<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_telemetry_bridge</name>
  <version>0.0.0</version>
  <description>Parse zmq data and publish to ROS2 topic</description>
  <maintainer email="tommyjbrownson@comcast.net">tommy</maintainer>
  <license>Proprietary</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>robot_telemetry_common</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>robot_telemetry_common</test_depend>

  <exec_depend>python3-zmq</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
